--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -3,6 +3,9 @@
 }
 
 body {
+  display: grid;
+  grid-template-rows: 48px auto 60px;
+  height: 100vh;
   background-color: var(--color-white);
   color: var(--color-black);
   font-family: sans-serif;
@@ -21,4 +24,24 @@ h3 {
 input,
 button {
   font-size: 1em;
+}
+
+.app-main {
+  display: grid;
+  grid-gap: 26px;
+  padding: 16px;
+  overflow-y: scroll;
+}
+
+.app-main > *:last-child {
+  position: relative;
+}
+.app-main > *:last-child::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 20px;
 }
