--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,3 +3,4 @@
 @import './_utility.css';
 @import './app-header/app-header.css';
 @import './quiz-card/quiz-card.css';
+@import './navigation/navigation.css';
