Change styling of quiz-app and navigation

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,3 +4,5 @@
 @import './app-header/app-header.css';
 @import './quiz-card/quiz-card.css';
 @import './navigation/navigation.css';
+@import './form/form.css';
+@import './app-main/app-main.css';
