--- a/src/styles/navigation/navigation.css
+++ b/src/styles/navigation/navigation.css
@@ -7,5 +7,11 @@
 }
 
 .navigation__link {
+  background-color: inherit;
+  border: none;
   color: var(--color-white);
+}
+
+.navigation__link--active {
+  background-color: steelblue;
 }
